--- a/angular.json
+++ b/angular.json
@@ -88,6 +88,10 @@
             ],
             "exclude": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     },
