--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "c-mig": "truffle compile && truffle migrate",
     "gan-cli": "ganache-cli -m 'puzzle crazy electric wide verify popular struggle latin genuine lawsuit thrive neck'",
     "deploy-github-pages": "ng build --prod --baseHref='https://spreadzp.github.io/happy-number/'",
-    "deploy-gp": "ng build --prod --base-href https://spreadzp.github.io/happy-number"
+    "deploy-gp": "ng deploy --base-href=/happy-number"
   },
   "private": true,
   "dependencies": {
