--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "happy-number",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
+  "author": "Paul Karpus <spread2009@gmail.com>",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,7 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "node patch.js",
-    "c-mig": "truffle compile && truffle migrate",
+    "c-mig": "truffle compile && truffle migrate --reset",
     "gan-cli": "ganache-cli -m 'puzzle crazy electric wide verify popular struggle latin genuine lawsuit thrive neck'",
     "deploy-github-pages": "ng build --prod --baseHref='https://spreadzp.github.io/happy-number/'",
     "deploy-gp": "ng deploy --base-href=/happy-number/"
